--- a/OutfitRecommender/OutfitRecommender/Views/Home/Index.cshtml
+++ b/OutfitRecommender/OutfitRecommender/Views/Home/Index.cshtml
@@ -2,6 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
+
+<div>@ViewContext.HttpContext.Session.GetString("userName")</div>
+<a href="~/Login/Logout">Logout</a>
+
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
